add test data ui
